k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hypertest
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - hypertest.zazukoians.org
    secretName: hypertest-zazukoians-org-tls
  rules:
  - host: hypertest.zazukoians.org
    http:
      paths:
      - path: /
        backend:
          serviceName: hypertest
          servicePort: 80
